# libvmod-poc_xcir

./: LICENSE  Makefile.am  README.rst  configure.ac  vmod-poc_xcir.spec
debian/: changelog  control  dirs
src/: Makefile.am  vmod_poc_param.h  vmod_poc_vfp.c  vmod_poc_vfp.h  vmod_poc_xcir.c  vmod_poc_xcir.vcc  vmod_smalllight_param.c  vmod_smalllight_param.h  vmod_vfp.c  vmod_vfp.h
src/tests/: test01.vtc
